<resources>
    <string name="app_name">ZEMedidores</string>


    <!-- UI Preference -->
    <string name="action_settings">Preferencias</string>
    <string name="action_sign_out">Cerrar sesión</string>
    <string name="action_about">Info</string>
    <string name="action_preference">Preferencias</string>
    <string name="action_map">Mapa</string>
    <string name="sp_key_empresa">spEmpresa</string>
    <string name="sp_key_ambiente">spAmbiente</string>
    <string name="sp_key_inspecciones">spInspecciones</string>
    <!-- UI Preference -->


    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_launch_screen">Intro</string>
    <string name="title_activity_un_authorized">Acceso no autorizado</string>

    <string name="title_activity_assignment_detail">Detalle</string>

    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_assignment_type">"Tipo de inspección "</string>
    <string name="title_activity_rejected">Inspección fallida</string>


    <!-- UI Init Shift -->
    <string name="unauthorized">Acceso no autorizado</string>

    <!-- UI Init Shift -->
    <string name="title_activity_init_shift">Empezar turno</string>
    <string name="init_shift_intro_text">Recuerde que debe iniciar su turno antes de realizar cualquier inspección (solo para usuarios autorizados)</string>
    <string name="init_shift_button">Iniciar turno</string>

    <!-- UI Main -->
    <string name="title_main">Listado de inspecciones</string>
    <string name="subtitle_main">Listado de inspecciones asignadas para hoy</string>

    <!-- UI Init inspection -->
    <string name="init_inspect_title">Ubicación</string>
    <string name="init_inspect_sub_title">Nombre del lugar a inspeccionar</string>
    <string name="init_inspect_ask">¿Se puede realizar inspección?</string>
    <string name="init_inspect_affirmative">Si</string>
    <string name="init_inspect_negative">No</string>

    <!-- UI Map activity -->
    <string name="map_inspecciones">Mapa de inspecciones</string>
    <string name="permissions_location">Para poder ocupar la aplicación se requieren permisos de ubicación y uso de camara</string>
    <string name="permissions_result">Puede empezar su turno</string>
    <string name="permissions_check">Revisando permisos</string>
    <string name="permissions_yes">Si</string>
    <string name="permissions_no">No</string>

    <!-- UI Fragments -->
    <string name="title_check_data">Realizar inspección</string>
    <string name="fragment_business_title">Ingreso de inspección: Empresa</string>
    <string name="fragment_residential_title">Ingreso de inspección: Residencial</string>
    <string name="fragment_commercial_title">Ingreso de inspección: Comercial</string>
    <string name="fragment_inspeccion_nueva">Ingreso de inspección: Auto Generada</string>


    <!-- UI Fragments residential form-->
    <string name="residential_form_title">Datos Residente</string>
    <string name="residential_form_warning">Poligono social</string>
    <string name="residential_form_name">Nombre del residente: </string>
    <string name="residential_form_rut">RUT del residente: </string>
    <string name="residential_form_phone">Teléfono: </string>
    <string name="residential_form_email">Correo electrónico: (Opcional)</string>
    <string name="residential_form_date">Fecha desde que habita el inmueble: </string>
    <string name="residential_form_measurer">Ubicación del medidor: </string>
    <string name="residential_form_measurer_status">¿El medidor está descompuesto?: </string>

    <string name="residential_form_save_button">Continuar</string>

    <!-- UI Fragments business form-->
    <string name="business_form_business_name">Nombre de la empresa: </string>
    <string name="business_form_name">Nombre del entrevistado: </string>
    <string name="business_form_rut">RUT del entrevistado: </string>
    <string name="business_form_rol">Cargo del entrevistado: </string>
    <string name="business_form_contact">Nombre de contacto de la empresa: </string>
    <string name="business_form_phone">Teléfono empresa: </string>
    <string name="business_form_save_button">Continuar</string>

    <!-- UI Fragments commercial form-->
    <string name="commercial_form_commercial_name">Nombre de la empresa: </string>
    <string name="commercial_form_name">Nombre del entrevistado: </string>
    <string name="commercial_form_rut">RUT del entrevistado: </string>
    <string name="commercial_form_rol">Cargo del entrevistado: </string>
    <string name="commercial_form_phone">Teléfono: </string>
    <string name="commercial_form_email">Email: </string>
    <string name="commercial_form_save_button">Continuar</string>

    <!-- UI Fragments execute test -->
    <string name="execute_test_form_test_1">Revisión visual del medidor</string>
    <string name="execute_test_form_test_2">Corte de llave de paso</string>
    <string name="execute_test_form_test_3">Funcionamiento del medidor</string>
    <string name="execute_test_form_test_4">Llave del medidor</string>
    <string name="execute_test_form_test_5">Desmontaje</string>
    <string name="execute_test_form_test_result">Seleccione el resultado:</string>


    <string name="test_results_save_error">Los resultados de las pruebas no pudieron ser guardados</string>
    <string name="test_results_saved">Los resultados fueron guardados</string>

    <string name="photo_test_meter_title">Compruebe accesibilidad del Medidor</string>
    <string name="photo_test_meter_reading">Foto de la lectura Medidor</string>
    <string name="photo_test_meter_number">Foto del número de medidor</string>
    <string name="photo_test_meter_panoramic">Foto panorámica del medidor</string>
    <string name="photo_test_property_reading">Foto del número de la municipalidad de la propiedad</string>
    <string name="photo_test_property_frontage">Foto de la fachada de la propiedad</string>
    <string name="photo_test_continue">Continuar inspección</string>

    <string name="photo_saved">Fotografía guardada</string>
    <string name="photo_uploaded">Fotografía enviada al servidor</string>

    <string name="photo_no_saved">Error al intentar guardar fotografía</string>
    <string name="photo_no_uploaded">Error al intentar enviar fotografía al servidor</string>

    <string name="photo_test_broken_meter_reason_title">Indique el tipo de falla</string>
    <string name="photo_test_broken_meter_reason">Ejemplo de tipo de falla</string>

    <string name="radio_button_yes">Si</string>
    <string name="radio_button_no">No</string>

    <string name="execute_test_title_1">¿Se evidencia intervención del medidor?</string>
    <string name="execute_test_title_2">¿Se evidencia intervención de la red?</string>


    <string name="ejecuta_test_titulo_2">Medidor</string>
    <string name="ejecuta_test_titulo_3">Características de la instalación</string>

    <string name="ejecuta_test_especificar">Especifique</string>

    <string name="execute_test_option_1">Uso imanes</string>
    <string name="execute_test_option_2">Invertir tomas</string>
    <string name="execute_test_option_3">Perforar cúpula</string>
    <string name="execute_test_option_4">Aspas cortadas</string>
    <string name="execute_test_option_5">Uso de alambre</string>
    <string name="execute_test_option_6">Prensado</string>
    <string name="execute_test_option_7">Otros (especificar)</string>


    <string name="execute_test_2_option_1">Instalación paralela</string>
    <string name="execute_test_2_option_2">Instalación bypass</string>
    <string name="execute_test_2_option_3">Otro (especifique)</string>


    <string name="execute_test_3_source_title">Fuente propia de abastecimiento</string>
    <string name="execute_test_3_new_building">Construcción nueva</string>
    <string name="execute_test_3_property_type">Tipo de propiedad</string>
    <string name="execute_test_3_occupant">Habitantes (Cantidad)</string>
    <string name="execute_test_3_bathroom">Baños (Cantidad)</string>
    <string name="execute_test_3_building_surface">Superficie edificada (m\u00B2)</string>
    <string name="execute_test_3_garden_surface">Superficie jardín (m\u00B2)</string>
    <string name="execute_test_3_access">Acceso (m\u00B2)</string>
    <string name="execute_test_3_total_surface">Superficie terreno (m\u00B2)</string>
    <string name="execute_test_3_comment">Observaciones</string>


    <string name="execute_test_3_type_title">Característica de la propiedad</string>
    <string name="execute_test_3_auto_supply">Poseé Auto  abastecimiento</string>
    <string name="execute_test_3_auto_supply_type">Tipo de fuente propia</string>
    <string name="execute_test_3_use">Uso</string>
    <string name="execute_test_3_active">Activo</string>
    <string name="execute_test_3_capacity">Capacidad nominal Bomba extracción</string>
    <string name="execute_test_3_dga">Resolución DGA Nº</string>
    <string name="execute_test_3_caudal">Merced/Caudal</string>


    <string name="execute_test_form_save_button">Guardar resultados</string>


    <!-- UI Fragments rejection form-->
    <string name="title_reason_rejected">Seleccione el motivo por el que no se realiza la inspección (obligatorio)</string>
    <string name="rejection_error">La razón de rechazo no ha podido ser enviada, por favor reintentar</string>
    <string name="rejection_hint">indique por qué no se puede realizar la inspección</string>

    <!-- UI Fragments negotiation form-->
    <string name="negotiation_form_title">Seleccione monto a pagar</string>
    <string name="negotiation_form_vulnerable">Polígono social</string>
    <string name="negotiation_form_mount">Monto de negociación</string>
    <string name="negotiation_form_debt">Deuda total</string>
    <string name="negotiation_form_comment">Comentario</string>
    <string name="negotiation_form_agreement">¿Acepta negociación?</string>
    <string name="negotiation_form_select_payment">Seleccione convenido de pago</string>
    <string name="negotiation_form_take_photo">Sacar foto de CI</string>

    <string name="negotiation_form_end">Finalizar inspección</string>
    <string name="title_activity_about">Información</string>
    <string name="title_activity_nueva_inspeccion">NuevaInspeccionActivity</string>

    <!-- UI Texto validaciones-->
    <string name="validacion_ubicacion_medidor">Debe especificar la ubicación del medidor</string>
    <string name="validacion_numero_medidor">Debe especificar el número de medidor</string>
    <string name="validacion_diametro_medidor">Debe especificar el diametro del medidor</string>
    <string name="validacion_lectura_medidor">Debe especificar la lectura del medidor</string>
    <string name="validacion_falla_medidor">Debe especificar la falla del medidor</string>
    <string name="validacion_estado_medidor">Debe indicar si el medidor está descompuesto o no</string>
    <string name="validacion_falla_iniciar_turno">No se puede iniciar turno</string>
    <string name="validacion_falla_enviar_inspeccion">No se ha podido enviar inspección</string>


    <string name="validacion_tipo_falla_otro">Debe ingresar la descripcion de la falla</string>

    <string name="validacion_formato_correo">Formato de correo incorrecto</string>
    <string name="validacion_formato_rut">Formato de RUT incorrecto</string>

    <string name="validacion_falta_foto">Asegúrese de sacar las fotos antes de continuar</string>


    <string name="validacion_falta_foto_medidor_descompuesto">Debe sacar la foto del medidor descompuesto</string>

    <string name="enviando_inspeccion">Enviando inspección</string>

</resources>
