<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zecovery.android.zemedidores.views.assignments.fragments.forms.NegotiationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/negotiation_form_title"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/negotiation_form_vulnerable"
                android:textColor="@color/gray_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="SI" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/negotiation_form_debt"
                android:textColor="@color/gray_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="111111" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/negotiation_form_mount"
                android:textColor="@color/gray_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="111111" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/negotiation_form_comment"
            android:maxLines="1"
            android:minLines="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/negotiation_form_agreement"
                android:textColor="@color/gray_500" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/negotiationAcceptedRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    android:text="@string/radio_button_yes" />

                <RadioButton
                    android:id="@+id/negotiationRejectedRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp"
                    android:text="@string/radio_button_no" />

            </RadioGroup>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/gray_400" />

        <LinearLayout
            android:id="@+id/paymentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/negotiation_form_select_payment"
                android:textColor="@color/gray_500" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/alpha"
                android:src="@drawable/ic_photo_camera_black_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/negotiation_form_take_photo"
                android:textColor="@color/gray_500" />


            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/alpha"
                android:src="@drawable/ic_photo_camera_black_24" />

        </LinearLayout>

        <Button
            android:id="@+id/endInspectionButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="12dp"
            android:text="@string/negotiation_form_end" />

    </LinearLayout>

</ScrollView>
